Updated to 9, removed Nullable and NotNull annotations